# DISCO-L475VG-IOT01A

./: .gitignore  .pre-commit-config.yaml  bootstrap.sh  generate_dashboard.py
.github/workflows/: ci_quality.yml  lint.yml
01_BareMetal/01_BareMetal_Blinky/src/: main.c
01_BareMetal/03_UART_Hello/: makefile
01_BareMetal/04_I2C_HTS221/: makefile
01_BareMetal/07_SPI_BLE_Hello/: makefile
01_BareMetal/shared/: my_stm32_map.h  startup.c
01_BareMetal_Blinky/: README.md  linker.ld  makefile
01_BareMetal_Blinky/src/: main.c  makefile  my_stm32_map.h  startup.c
02_RTOS/: makefile
02_RTOS/0-Modules/01-pre-RR-sch/inc/: scheduler.h
02_RTOS/0-Modules/01-pre-RR-sch/src/: scheduler.c
02_RTOS/0-Modules/02-pre-priority-sch/inc/: scheduler.h
02_RTOS/0-Modules/02-pre-priority-sch/src/: context_switch.s  main.c
02_RTOS/cmsis/src/: startup_stm32l475xx.s
02_RTOS/src/: main.c
02_Scheduler/: linker.ld  makefile
02_Scheduler/0-Modules/02-pre-priority-sch/src/: main.c  scheduler.c
02_SysTick_Timer/: makefile
02_SysTick_Timer/src/: main.c
03_FreeRTOS/: STM32L475VGTx_FLASH.ld  makefile
03_FreeRTOS/App/: main.c  main.h
03_FreeRTOS/App/Inc/: appHeartbeat.h  appLogger.h  appSensorRead.h  sysManager.h  xtoa.h
03_FreeRTOS/App/Src/: appHeartbeat.c  appLogger.c  appSensorRead.c  sysManager.c  xtoa.c
03_FreeRTOS/Drivers/BSP/B-L475E-IOT01/: stm32l475e_iot01_qspi.h
03_FreeRTOS/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l475xx.h
03_FreeRTOS/Drivers/CMSIS/Device/ST/STM32L4xx/Source/: stm32l4xx_it.c
03_FreeRTOS/Drivers/STM32L4xx_HAL_Driver/: stm32l4xx_hal_conf.h
03_FreeRTOS/Drivers/STM32L4xx_HAL_Driver/Inc/: cppcheck-addon-ctu-file-list150696  cppcheck-addon-ctu-file-list150743  stm32l4xx_hal_can.h  stm32l4xx_hal_cryp.h  stm32l4xx_hal_cryp_ex.h  stm32l4xx_hal_flash.h  stm32l4xx_hal_hash.h  stm32l4xx_hal_hash_ex.h  stm32l4xx_hal_hcd.h  stm32l4xx_hal_lptim.h  stm32l4xx_hal_ltdc_ex.h  stm32l4xx_hal_mmc.h  stm32l4xx_hal_mmc_ex.h  stm32l4xx_hal_ospi.h  stm32l4xx_hal_pcd.h  stm32l4xx_hal_rng.h  stm32l4xx_hal_rtc.h  stm32l4xx_hal_sd.h  stm32l4xx_hal_sd_ex.h  stm32l4xx_hal_smartcard.h  stm32l4xx_hal_swpmi.h  stm32l4xx_hal_usart.h  stm32l4xx_ll_fmc.h  stm32l4xx_ll_pka.h  stm32l4xx_ll_rng.h  stm32l4xx_ll_sdmmc.h  stm32l4xx_ll_swpmi.h  stm32l4xx_ll_usb.h
03_FreeRTOS/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_can.c  stm32l4xx_hal_crc.c  stm32l4xx_hal_cryp.c  stm32l4xx_hal_cryp_ex.c  stm32l4xx_hal_dac.c  stm32l4xx_hal_hash.c  stm32l4xx_hal_hash_ex.c  stm32l4xx_hal_hcd.c  stm32l4xx_hal_mmc.c  stm32l4xx_hal_mmc_ex.c  stm32l4xx_hal_nand.c  stm32l4xx_hal_ospi.c  stm32l4xx_hal_pcd.c  stm32l4xx_hal_pcd_ex.c  stm32l4xx_hal_pka.c  stm32l4xx_hal_qspi.c  stm32l4xx_hal_rng.c  stm32l4xx_hal_rng_ex.c  stm32l4xx_hal_rtc.c  stm32l4xx_hal_sai_ex.c  stm32l4xx_hal_sd.c  stm32l4xx_hal_sd_ex.c  stm32l4xx_hal_smbus.c  stm32l4xx_hal_spi.c  stm32l4xx_hal_swpmi.c  stm32l4xx_hal_uart.c  stm32l4xx_ll_crs.c  stm32l4xx_ll_fmc.c  stm32l4xx_ll_rcc.c  stm32l4xx_ll_sdmmc.c  stm32l4xx_ll_swpmi.c  stm32l4xx_ll_tim.c  stm32l4xx_ll_usb.c
03_FreeRTOS/Middlewares/FreeRTOS/: FreeRTOSConfig.h
03_UART_Hello/src/: main.c
04_FreeRTOS_Cpp/: CMakeLists.txt  STM32L475VGTx_FLASH.ld  my.cmake
04_FreeRTOS_Cpp/App/: main.cpp  main.hpp
04_FreeRTOS_Cpp/App/Inc/: appDefines.hpp  appHeartbeat.hpp  appLogger.hpp  appSensorRead.hpp  sysManager.hpp  xtoa.hpp
04_FreeRTOS_Cpp/App/Src/: appHeartbeat.cpp  appLogger.cpp  appSensorRead.cpp  sysManager.cpp  xtoa.cpp
04_FreeRTOS_Cpp/HIL_test/: conftest.py  hil_test_report.html  test_system.py
04_FreeRTOS_Cpp/Interfaces/Inc/: IHardware.hpp  IRTOS.hpp  ISensor.hpp
04_FreeRTOS_Cpp/tests/: CMakeLists.txt  MockInterfaces.hpp  test_appHeartbeat.cpp  test_appLogger.cpp  test_appSensorRead.cpp  test_sysManager.cpp  test_xtoa.cpp
04_I2C_HTS221/src/: main.c
05_DMA_Acceleration/src/: main.c
06_Watchdog/src/: main.c
07_SPI_BLE_Hello/src/: main.c
08_UserBtn_EXT_Interrupt/src/: main.c
_sass/: custom.scss
assets/css/: just-the-docs.scss
build_utils/: .clang-format  .pre-commit-config.yaml  cppcheck_suppressions.txt  misra_rules.json
docs/: Gemfile  _config.yml  code-quality.md  index.md  lesson-learned  lesson-learned.md  module-1-baremetal.md  module-2-systick.md  module-4-i2c-hts221.md  module-7-spi-ble.md  monorepo.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  shared-build.md  shared-linker.md  shared-map.md  shared-startup.md  shared.md  wsl-debug-setup.md
docs/01_BareMetal/: module-1-baremetal.md  module-2-systick.md  module-3-uart.md  module-4-i2c-hts221.md  module-5-dma.md  module-6-iwdg.md  module-7-spi-ble.md  module-8-ext_intrrupt_usr_btn  phase-1-lesson-learned.md  shared.md
docs/02_RTOS/: 01-folder-structure.md  module-1-RR-scheduler.md  module-1-scheduler.md  module-2-PB-scheduler.md
docs/02_Scheduler/: 01-folder-structure.md  module-1-RR-scheduler.md  module-2-PB-scheduler.md  phase-2-lesson-learned.md
docs/03_FreeRTOS/: 00-guide.md  flash-log-over-uart.txt  misra-setup-guide.md  module-1-QueueHybridMemory.md  module-2-event-groups-app.md  module-3-qspi-eventLog.md  module-4-wdg.md  module-5-usb-classes.md  phase-3-future-scope.md  phase-3-lesson-learned.md
docs/04_FreeRTOS_Cpp/: 01-transition.md  02-architecture-journey.md  03-complex-debug.md  04-automated-HIL.md
docs/shared/: shared-linker.md  shared-map.md  shared-startup.md
shared/: base.mk  dma.c  dma.h  hts221.c  hts221.h  i2c.c  i2c.h  iwdg.c  iwdg.h  linker.ld  my_stm32_map.h  spi.c  spi.h  startup.c  uart.c  uart.h
